part4/e1/manifests/deployment_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp-ns
  name: p4e01-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p4e01-pong
  template:
    metadata:
      labels:
        app: p4e01-pong
    spec:
      containers:
        - name: p4e01-pong-container
          image: mcfizh/dwk-part1:p4e01-pong
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp-ns
  name: p4e01-main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p4e01-main
  template:
    metadata:
      labels:
        app: p4e01-main
    spec:
      volumes:
        - name: shared
          emptyDir: {}
      containers:
        - name: p4e01-main-a
          image: mcfizh/dwk-part1:p4e01-main-a
          volumeMounts:
            - name: shared
              mountPath: /shared
        - name: p4e01-main-b
          image: mcfizh/dwk-part1:p4e01-main-b
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
            - name: shared
              mountPath: /shared
