part4/e1/manifests/deployment_2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql-ss
  namespace: mainapp-ns
spec:
  serviceName: pgsql
  replicas: 1
  selector:
    matchLabels:
      app: pgapp
  template:
    metadata:
      labels:
        app: pgapp
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - name: pgsql
              containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-svc
  namespace: mainapp-ns
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: pgapp
